# taskpull

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REFACTOR.md  config.toml  pyproject.toml  taskpull.sh
.github/workflows/: publish.yml
scripts/: capture_gh_traffic.py
src/taskpull/: Dockerfile  __main__.py  config.py  credentials.py  daemon.py  engine.py  engine_events.py  gh_proxy.py  gh_proxy_v2.py  gh_watcher.py  hooks.py  http_server.py  ipc.py  markdown_v2.py  mcp_server.py  notify.py  session.py  session_manager.py  state.py  state_manager.py  supervisor.py  task.py  tui.py  waker.py  workspace.py  worktree.py
tasks/: fix-expected-failures.md  test-task.md
tests/: conftest.py  test_engine.py  test_gh_proxy.py  test_gh_proxy_e2e.py  test_gh_proxy_v2.py  test_gh_watcher.py  test_ipc.py  test_markdown_v2.py  test_state.py  test_state_manager.py  test_supervisor.py  test_task.py  test_waker.py  test_workspace.py
tests/fixtures/: .gitkeep-edit-pr-labels  add_labels.json  close_issue.json  close_pr.json  create_issue.json  create_pr.json  edit_issue.json  edit_pr.json  edit_pr_labels.json  git_push.json  list_issues.json  remove_labels.json  remove_pr_labels.json  rest_add_labels.json  rest_close_issue.json  rest_close_pr.json  rest_create_issue.json  rest_create_pr.json  rest_edit_issue.json  rest_edit_pr.json  rest_edit_pr_labels.json  rest_remove_labels.json  rest_remove_pr_labels.json
