[project]
name = "taskpull"
version = "0.1.0"
description = "Pull-based multi-repo Claude Code task runner"
requires-python = ">=3.12"
dependencies = [
    "libtmux>=0.40",
    "mcp>=1.0",
]

[project.scripts]
taskpull = "taskpull:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskpull"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
