[project]
name = "taskpull"
version = "0.1.0"
description = "Pull-based multi-repo Claude Code task runner"
requires-python = ">=3.14"
dependencies = [
    "graphql-core>=3.2",
    "keyring>=25.0",
    "mcp>=1.0",
    "setproctitle>=1.3",
    "pydantic>=2.12",
]

[project.scripts]
taskpull = "taskpull:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskpull"]

[dependency-groups]
dev = [
    "mitmproxy>=12.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
